--- a/11 - 2D Graphics/6 - Brushes/2 - Tile Brushes/1 - DrawingBrush/TileFlipXY.xaml
+++ b/11 - 2D Graphics/6 - Brushes/2 - Tile Brushes/1 - DrawingBrush/TileFlipXY.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WPFUnleashed.MainWindow"
+﻿<Window x:Class="WPFUnleashed.FlipXY"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFUnleashed"
         mc:Ignorable="d"
-        Title="DrawingBrush as the Background" Height="350" Width="525">
+        Title="TileFlipXY" Height="300" Width="300">
     <Window.Resources>
         <ResourceDictionary>
             <DrawingGroup x:Key="ghost">
@@ -16,7 +16,7 @@
                                             C 100,400 100,250 100,200
                                             C 0,350   0,250   30,130
                                             C 75,0    100,0   150,0
-                                            C 200,0   250,0   250,150 Z" />     
+                                            C 200,0   250,0   250,150 Z" />
                 <!-- The Eyes -->
                 <GeometryDrawing Brush="Black">
                     <GeometryDrawing.Pen>
@@ -44,7 +44,7 @@
         </ResourceDictionary>
     </Window.Resources>
     <Window.Background>
-        <DrawingBrush Stretch="UniformToFill">
+        <DrawingBrush Stretch="Fill" TileMode="FlipXY"  Viewport="0, 0, 0.1, 0.2">
             <DrawingBrush.Drawing>
                 <DrawingGroup>
                     <DrawingGroup>
@@ -54,7 +54,4 @@
             </DrawingBrush.Drawing>
         </DrawingBrush>
     </Window.Background>
-    <Grid>
-        
-    </Grid>
 </Window>
